# Python-

./: .gitignore
course/: .pre-commit-config.yaml  CLASSROOM.md  README.md  UPGRADES.md  mkdocs.yml  pyproject.toml  requirements.txt
course/amazing-maze/: lesson.md
course/amazing-maze/exercises/: README.md
course/amazing-maze/solutions/: .gitignore  Makefile  README.md  a_maze_ing.py  config.txt  mazegen-1.0.0-py3-none-any.whl  pyproject.toml
course/amazing-maze/solutions/mazegen/: __init__.py  generator.py
course/course_cli/: __init__.py  __main__.py  cli.py  commands.py  discover.py  progress.py
course/docs/: c-to-python.md  index.md  setup.md  tests.md  upgrades.md
course/docs/modules/: 02-errors.md
course/module-00-fundamentals/: lesson.md
course/module-00-fundamentals/examples/: 01_syntax_tour.py  main.py
course/module-01-oop/: lesson.md
course/module-01-oop/examples/: 01_classes_tour.py
course/module-02-errors/examples/: 01_exceptions_tour.py
course/module-03-collections/: lesson.md
course/module-03-collections/examples/: 01_collections_tour.py
course/module-04-fileio/: lesson.md
course/module-04-fileio/examples/: 01_fileio_tour.py
course/module-05-polymorphism/: lesson.md
course/module-05-polymorphism/examples/: 01_polymorphism_tour.py
course/module-06-imports/: lesson.md
course/module-06-imports/examples/: 01_import_tour.py
course/module-06-imports/exercises/: README.md  elements.py  ft_alembic_0.py  ft_alembic_1.py  ft_alembic_2.py  ft_alembic_3.py  ft_alembic_4.py  ft_alembic_5.py  ft_distillation_0.py  ft_distillation_1.py  ft_kaboom_0.py  ft_kaboom_1.py  ft_transmutation_0.py  ft_transmutation_1.py  ft_transmutation_2.py
course/module-06-imports/solutions/: ft_alembic_3.py  ft_alembic_4.py  ft_kaboom_0.py  ft_kaboom_1.py  ft_transmutation_0.py  ft_transmutation_1.py
course/module-07-abstract/: lesson.md
course/module-07-abstract/examples/: 01_patterns_tour.py
course/module-07-abstract/exercises/: README.md  battle.py  capacitor.py  tournament.py
course/module-07-abstract/solutions/: battle.py  capacitor.py  tournament.py
course/module-08-matrix/: lesson.md
course/module-08-matrix/examples/: 01_venv_inspect.py
course/module-08-matrix/exercises/: README.md
course/module-08-matrix/exercises/ex2/: oracle.py  (+2 more)
course/module-09-pydantic/: lesson.md
course/module-09-pydantic/examples/: 01_pydantic_tour.py
course/module-09-pydantic/exercises/: README.md
course/module-10-functional/: lesson.md
course/module-10-functional/examples/: 01_functional_tour.py
course/module-10-functional/exercises/: README.md
course/notebooks/: 00-fundamentals.ipynb  00_index.ipynb  01-oop.ipynb  02-errors.ipynb  03-collections.ipynb  04-fileio.ipynb  05-polymorphism.ipynb  06-imports.ipynb  07-abstract.ipynb  08-matrix.ipynb  09-pydantic.ipynb  10-functional.ipynb  amazing-maze.ipynb
course/tests/: test_all_solutions.py
course/tests/exercises/: __init__.py  _harness.py  test_module00.py  test_modules_01_to_04.py  test_modules_05_to_10.py
course/tools/: __init__.py  build_anki.py  md_to_ipynb.py  summarise_junit.py  sync_docs.py
(+125 files in other folders)
