[project]
name = "42-python-rank2-course"
version = "0.1.0"
description = "Self-paced course for the 42 Berlin Rank 2 Python track."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "42 Python Course contributors"}]

dependencies = [
    "pydantic>=2,<3",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-xdist>=3",
    "flake8>=6",
    "mypy>=1.8",
    "pre-commit>=3.5",
    "build>=1.0",
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.4",
    "pymdown-extensions>=10",
]
notebooks = [
    "jupyterlab>=4",
    "jupytext>=1.16",
]
data = [
    "numpy>=1.25",
    "pandas>=2.1",
    "matplotlib>=3.7",
]
anki = [
    "genanki>=0.13",
]

[project.scripts]
course = "course_cli.__main__:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["course_cli*", "tools*"]
exclude = ["tests*", "module-*", "notebooks*", "docs*"]

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
exclude = [".venv", "build", "dist", "*.egg-info"]

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
filterwarnings = [
    "ignore::DeprecationWarning",
]
